--- a/Github/index.html
+++ b/Github/index.html
@@ -73,8 +73,6 @@
 
 
 
-  
-
 
   <link rel="alternate" href="/atom.xml" title="疯子" type="application/atom+xml">
 
@@ -140,6 +138,8 @@
 
 
 
+  <!-- 页面点击小红心 -->
+  <script type="text/javascript" src="/js/src/love.js"></script>
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage" lang="zh-Hans">
