--- a/Github/index.html
+++ b/Github/index.html
@@ -528,6 +528,9 @@
 
 
 
+  
+  
+
 
 
 
@@ -564,6 +567,16 @@
   
   
     <script type="text/javascript" src="/lib/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+  
+
+  
+  
+    <script type="text/javascript" src="/lib/three/three.min.js"></script>
+  
+
+  
+  
+    <script type="text/javascript" src="/lib/three/three-waves.min.js"></script>
   
 
 
