--- a/Github/index.html
+++ b/Github/index.html
@@ -73,8 +73,6 @@
 
 
 
-  
-
 
   <link rel="alternate" href="/atom.xml" title="疯子" type="application/atom+xml">
 
@@ -463,6 +461,15 @@
   </span>
   <span class="author" itemprop="copyrightHolder">LouMengxuan</span>
 
+  
+    <span class="post-meta-divider">|</span>
+    <span class="post-meta-item-icon">
+      <i class="fa fa-area-chart"></i>
+    </span>
+    
+      <span class="post-meta-item-text">Site words total count&#58;</span>
+    
+    <span title="Site words total count">3.7k</span>
   
 </div>
 
